Reset the sass from css

--- a/src/app/components/bars/cookie-bar/cookie-bar.component.scss
+++ b/src/app/components/bars/cookie-bar/cookie-bar.component.scss
@@ -1,38 +1,45 @@
+@import '../../../styles/colors';
+@import '../../../styles/dimensions';
+
 .cookie-message {
   text-align: center;
-  background: #0069D2;
-  color: #FFFFFF;
-  padding: 20px 32px; }
+  background: $color-blue-500;
+  color: $white;
+  padding: 20px 32px;
+  @media screen and (min-width: $sm-device-width) {
+    text-align: left;
+  }
 
-@media screen and (min-width: 767px) {
-  .cookie-message {
-    text-align: left; } }
+  .cookie-message-inner {
+    max-width: 784px;
+    margin: 0 auto;
+    @media screen and (min-width: $sm-device-width) {
+      display: flex;
+    }
 
-.cookie-message .cookie-message-inner {
-  max-width: 784px;
-  margin: 0 auto; }
+    p {
+      margin: auto;
 
-@media screen and (min-width: 767px) {
-  .cookie-message .cookie-message-inner {
-    display: flex; } }
+      .read-more {
+        display: block;
+        margin: 15px 0;
+        color: inherit;
+        text-decoration: underline;
 
-.cookie-message .cookie-message-inner p {
-  margin: auto; }
+        &:hover {
+          text-decoration: none;
+        }
+        @media screen and (min-width: $sm-device-width) {
+          display: inline;
+          margin: 0;
+        }
+      }
+    }
 
-.cookie-message .cookie-message-inner p .read-more {
-  display: block;
-  margin: 15px 0;
-  color: inherit;
-  text-decoration: underline; }
-
-.cookie-message .cookie-message-inner p .read-more:hover {
-  text-decoration: none; }
-
-@media screen and (min-width: 767px) {
-  .cookie-message .cookie-message-inner p .read-more {
-    display: inline;
-    margin: 0; } }
-
-@media screen and (min-width: 767px) {
-  .cookie-message .cookie-message-inner .cookies-button {
-    margin: auto; } }
+    .cookies-button {
+      @media screen and (min-width: $sm-device-width) {
+        margin: auto;
+      }
+    }
+  }
+}
