--- a/src/app/components/cards/user-card/user-card.component.scss
+++ b/src/app/components/cards/user-card/user-card.component.scss
@@ -1,173 +1,51 @@
-.truncate-owerflowing-text {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis; }
-
-.wrap-long-words {
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  -ms-word-break: break-all;
-  word-break: break-word;
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto; }
-
-@font-face {
-  font-family: 'museo';
-  src: url("/assets/fonts/museo/museo-300.otf") format("opentype");
-  font-weight: 300; }
-
-@font-face {
-  font-family: 'museo';
-  src: url("/assets/fonts/museo/museo-500.otf") format("opentype");
-  font-weight: 500; }
-
-@font-face {
-  font-family: 'museo';
-  src: url("/assets/fonts/museo/museo-700.otf") format("opentype");
-  font-weight: 700; }
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "museo", "Helvetica Neue", Helvetica, Arial, sans-serif; }
-
-h1 {
-  font-size: 42px;
-  font-weight: 700; }
-
-h2 {
-  font-size: 36px;
-  font-weight: 700; }
-
-h3 {
-  font-size: 24px;
-  font-weight: 700; }
-
-h4 {
-  font-size: 18px;
-  font-weight: 700; }
-
-h5 {
-  font-size: 16px;
-  font-weight: 700; }
-
-h6 {
-  font-size: 14px;
-  font-weight: 700; }
-
-p, div, span, a {
-  font-family: "Open Sans", sans-serif; }
-
-p {
-  font-size: 16px;
-  line-height: 22px; }
-
-a {
-  color: #45E2FF; }
-
-a:hover {
-  color: #ED4DA4;
-  cursor: pointer; }
-
-a:not([href]):not([tabindex]) {
-  color: #45E2FF; }
-
-a:not([href]):not([tabindex]):hover {
-  color: #ED4DA4; }
-
-.fs-s {
-  font-size: 12px; }
-
-.fs-m0 {
-  font-size: 14px; }
-
-.fs-m {
-  font-size: 16px; }
-
-.fs-l {
-  font-size: 18px; }
-
-.fs-l0 {
-  font-size: 20px; }
-
-.fs-xl {
-  font-size: 22px; }
-
-.fs-xxl {
-  font-size: 24px; }
-
-.fs-xxxl {
-  font-size: 32px; }
+@import '../../../styles/colors';
+@import '../../../styles/typography';
 
 .ui.card {
   width: 260px;
   text-align: left;
   margin-top: 1em;
-  margin-bottom: 1em; }
+  margin-bottom: 1em;
 
-.ui.card .image {
-  height: 290px; }
+  .image {
+    height: 290px;
 
-.ui.card .image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; }
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 
-.ui.card .header {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis; }
+  .header {
+    @include truncate-owerflowing-text;
+  }
 
-.ui.card .description {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis; }
+  .description {
+    @include truncate-owerflowing-text;
+  }
 
-.ui.card .base.content {
-  height: 94px; }
+  .base.content {
+    height: 94px;
+  }
 
-.ui.card .extra.content {
-  height: 60px;
-  display: flex;
-  flex-wrap: nowrap;
-  align-items: center; }
+  .extra.content {
+    height: 60px;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
 
-.ui.card .extra.content .icon {
-  flex-shrink: 0; }
+    .icon {
+      flex-shrink: 0;
+    }
 
-.ui.card .extra.content .address {
-  text-align: left;
-  background: transparent;
-  display: block;
-  display: -webkit-box;
-  max-height: 33.6px;
-  font-size: 12px;
-  line-height: 1.4;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis; }
+    .address {
+      text-align: left;
+      @include truncate-owerflowing-text-multiline($font-size: $fs-s, $lines-to-show: 2);
+    }
 
-@-moz-document url-prefix() {
-  .ui.card .extra.content .address {
-    overflow: hidden;
-    position: relative; }
-  .ui.card .extra.content .address:before {
-    background: transparent;
-    bottom: 0;
-    position: absolute;
-    right: 0;
-    float: right;
-    content: '\2026';
-    margin-left: -3rem;
-    width: 3rem; }
-  .ui.card .extra.content .address:after {
-    content: '';
-    background: transparent;
-    position: absolute;
-    height: 50px;
-    width: 100%;
-    z-index: 1; } }
-
-.ui.card .extra.content .no-address {
-  font-style: italic; }
+    .no-address {
+      font-style: italic;
+    }
+  }
+}
