--- a/src/app/components/chats/basic-chat/basic-chat.component.scss
+++ b/src/app/components/chats/basic-chat/basic-chat.component.scss
@@ -1,2 +1,5 @@
+@import '../../../styles/colors';
+
 .chat-header {
-  background-color: #F6F6F6 !important; }
+  background-color: $color-gray-25 !important;
+}
