--- a/src/app/components/pagers/basic-pager/basic-pager.component.scss
+++ b/src/app/components/pagers/basic-pager/basic-pager.component.scss
@@ -1,144 +1,57 @@
-.truncate-owerflowing-text {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis; }
-
-.wrap-long-words {
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  -ms-word-break: break-all;
-  word-break: break-word;
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto; }
-
-@font-face {
-  font-family: 'museo';
-  src: url("/assets/fonts/museo/museo-300.otf") format("opentype");
-  font-weight: 300; }
-
-@font-face {
-  font-family: 'museo';
-  src: url("/assets/fonts/museo/museo-500.otf") format("opentype");
-  font-weight: 500; }
-
-@font-face {
-  font-family: 'museo';
-  src: url("/assets/fonts/museo/museo-700.otf") format("opentype");
-  font-weight: 700; }
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "museo", "Helvetica Neue", Helvetica, Arial, sans-serif; }
-
-h1 {
-  font-size: 42px;
-  font-weight: 700; }
-
-h2 {
-  font-size: 36px;
-  font-weight: 700; }
-
-h3 {
-  font-size: 24px;
-  font-weight: 700; }
-
-h4 {
-  font-size: 18px;
-  font-weight: 700; }
-
-h5 {
-  font-size: 16px;
-  font-weight: 700; }
-
-h6 {
-  font-size: 14px;
-  font-weight: 700; }
-
-p, div, span, a {
-  font-family: "Open Sans", sans-serif; }
-
-p {
-  font-size: 16px;
-  line-height: 22px; }
-
-a {
-  color: #45E2FF; }
-
-a:hover {
-  color: #ED4DA4;
-  cursor: pointer; }
-
-a:not([href]):not([tabindex]) {
-  color: #45E2FF; }
-
-a:not([href]):not([tabindex]):hover {
-  color: #ED4DA4; }
-
-.fs-s {
-  font-size: 12px; }
-
-.fs-m0 {
-  font-size: 14px; }
-
-.fs-m {
-  font-size: 16px; }
-
-.fs-l {
-  font-size: 18px; }
-
-.fs-l0 {
-  font-size: 20px; }
-
-.fs-xl {
-  font-size: 22px; }
-
-.fs-xxl {
-  font-size: 24px; }
-
-.fs-xxxl {
-  font-size: 32px; }
+@import '../../../styles/colors';
+@import '../../../styles/typography';
 
 .pager-container {
-  font-size: 16px;
-  background-color: #F6F6F6; }
+  font-size: $fs-m;
+  background-color: $color-gray-25;
 
-.pager-container .pager-inner-container {
-  max-width: 600px;
-  margin: 0 auto; }
+  .pager-inner-container {
+    max-width: 600px;
+    margin: 0 auto;
+  }
+}
 
 .back-button {
   text-align: left;
-  color: #E5007D;
-  padding-top: 0; }
+  color: $color-primary-cerise;
 
-.back-button > i {
-  cursor: pointer; }
+  > i {
+    cursor: pointer;
+  }
+  padding-top: 0;
+}
 
 .forward-button {
   text-align: right;
-  color: #E5007D;
-  padding-top: 0; }
+  color: $color-primary-cerise;
 
-.forward-button > i {
-  cursor: pointer; }
+  > i {
+    cursor: pointer;
+  }
+  padding-top: 0;
+}
 
 .pagination-text {
   display: flex;
   text-align: center;
-  align-items: center; }
+  align-items: center;
+}
 
 .pagination-button {
-  color: #E5007D;
-  cursor: pointer; }
+  color: $color-primary-cerise;
+  cursor: pointer;
+}
 
 .pagination-button-right {
-  text-align: right; }
+  text-align: right;
+}
 
 .navigation-leftmost-arrow {
   position: relative;
-  left: 7px; }
+  left: 7px;
+}
 
 .navigation-rightmost-arrow {
   position: relative;
-  right: 7px; }
+  right: 7px;
+}
