--- a/src/app/components/pages/contact-page/contact-page.component.scss
+++ b/src/app/components/pages/contact-page/contact-page.component.scss
@@ -1,18 +1,24 @@
+@import '../../../styles/colors';
+
 .contact-form-container {
-  background-color: #FFFFFF; }
+  background-color: $default-bg-color;
 
-.contact-form-container .contact-form-description {
-  margin: 0 auto;
-  padding-top: 30px;
-  text-align: center;
-  vertical-align: middle;
-  width: 50%; }
+  .contact-form-description {
+    margin: 0 auto;
+    padding-top: 30px;
+    text-align: center;
+    vertical-align: middle;
+    width: 50%;
+  }
 
-.contact-form-container .contact-form-icon-container {
-  margin: 0 auto;
-  padding-bottom: 50px;
-  padding-top: 10px;
-  text-align: center; }
+  .contact-form-icon-container {
+    margin: 0 auto;
+    padding-bottom: 50px;
+    padding-top: 10px;
+    text-align: center;
 
-.contact-form-container .contact-form-icon-container .contact-form-icon {
-  color: #E5007D; }
+    .contact-form-icon {
+      color: $color-primary-cerise;
+    }
+  }
+}
