--- a/src/app/components/pages/support-chat-page/support-chat-page.component.scss
+++ b/src/app/components/pages/support-chat-page/support-chat-page.component.scss
@@ -1,2 +1,5 @@
+@import '../../../styles/dimensions';
+
 .chat-container {
-  height: calc(100% - 74px); }
+  height: calc(100% - #{$basic-border-header-height});
+}
