--- a/src/app/components/sections/how-it-works-and-maximize-chances-section/how-it-works-and-maximize-chances-section.component.scss
+++ b/src/app/components/sections/how-it-works-and-maximize-chances-section/how-it-works-and-maximize-chances-section.component.scss
@@ -1,5 +1,9 @@
+@import '../../../styles/colors';
+
 .how-it-works-section {
-  background-color: #0069D2 !important; }
+  background-color: $color-secondary-blue !important;
+}
 
 .maximize-chances-section {
-  background-color: #383F4E !important; }
+  background-color: $color-secondary-gray !important;
+}
