--- a/src/app/components/sections/partners-section/partners-section.component.scss
+++ b/src/app/components/sections/partners-section/partners-section.component.scss
@@ -1,7 +1,9 @@
 .partners-imgae-link {
   display: flex;
   align-items: center;
-  height: 80px; }
+  height: 80px;
 
-.partners-imgae-link .ui.image {
-  filter: grayscale(100%); }
+  .ui.image {
+    filter: grayscale(100%);
+  }
+}
