--- a/src/app/styles/typography.scss
+++ b/src/app/styles/typography.scss
@@ -1,9 +1,17 @@
-.truncate-owerflowing-text {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis; }
+@import './colors';
 
-.wrap-long-words {
+$museo: 'museo', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$fs-s: 12px;
+$fs-m0: 14px;
+$fs-m: 16px;
+$fs-l: 18px;
+$fs-l0: 20px;
+$fs-xl: 22px;
+$fs-xxl: 24px;
+$fs-xxxl: 32px;
+$fs-xxxxl: 48px;
+
+@mixin wrap-long-words() {
   overflow-wrap: break-word;
   word-wrap: break-word;
   -ms-word-break: break-all;
@@ -11,90 +19,167 @@
   -ms-hyphens: auto;
   -moz-hyphens: auto;
   -webkit-hyphens: auto;
-  hyphens: auto; }
+  hyphens: auto;
+}
+
+@mixin truncate-owerflowing-text() {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+
+@mixin truncate-owerflowing-text-multiline($font-size: $fs-m, $line-height: 1.4, $lines-to-show: 3, $excerpt-bg: transparent) {
+  background: $excerpt-bg;
+  display: block; // Fallback for non-webkit
+  display: -webkit-box;
+  max-height: $font-size*$line-height*$lines-to-show; // Fallback for non-webkit
+  font-size: $font-size;
+  line-height: $line-height;
+  -webkit-line-clamp: $lines-to-show;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  @-moz-document url-prefix() {
+    overflow: hidden;
+    position: relative;
+    &:before {
+      background: $excerpt-bg;
+      bottom: 0;
+      position: absolute;
+      right: 0;
+      float: right;
+      content: '\2026';
+      margin-left: -3rem;
+      width: 3rem;
+    }
+    &:after {
+      content: '';
+      background: $excerpt-bg;
+      position: absolute;
+      height: 50px;
+      width: 100%;
+      z-index: 1;
+    }
+  }
+}
+
+.truncate-owerflowing-text {
+  @include truncate-owerflowing-text;
+}
+
+.wrap-long-words {
+  @include wrap-long-words;
+}
 
 @font-face {
   font-family: 'museo';
-  src: url("/assets/fonts/museo/museo-300.otf") format("opentype");
-  font-weight: 300; }
+  src: url('/assets/fonts/museo/museo-300.otf') format('opentype');
+  font-weight: 300;
+}
 
 @font-face {
-  font-family: 'museo';
-  src: url("/assets/fonts/museo/museo-500.otf") format("opentype");
-  font-weight: 500; }
+    font-family: 'museo';
+    src: url('/assets/fonts/museo/museo-500.otf') format('opentype');
+    font-weight: 500;
+}
 
 @font-face {
-  font-family: 'museo';
-  src: url("/assets/fonts/museo/museo-700.otf") format("opentype");
-  font-weight: 700; }
+    font-family: 'museo';
+    src: url('/assets/fonts/museo/museo-700.otf') format('opentype');
+    font-weight: 700;
+}
+
+// font stacks
+$default-font-family:  'Open Sans', sans-serif;
+$header-font-family:   $museo;
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "museo", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+  font-family: $header-font-family;
+}
 
 h1 {
   font-size: 42px;
-  font-weight: 700; }
+  font-weight: 700;
+}
 
 h2 {
   font-size: 36px;
-  font-weight: 700; }
+  font-weight: 700;
+}
 
 h3 {
   font-size: 24px;
-  font-weight: 700; }
+  font-weight: 700;
+}
 
 h4 {
   font-size: 18px;
-  font-weight: 700; }
+  font-weight: 700;
+}
 
 h5 {
   font-size: 16px;
-  font-weight: 700; }
+  font-weight: 700;
+}
 
 h6 {
   font-size: 14px;
-  font-weight: 700; }
+  font-weight: 700;
+}
 
 p, div, span, a {
-  font-family: "Open Sans", sans-serif; }
+  font-family: $default-font-family;
+}
 
 p {
   font-size: 16px;
-  line-height: 22px; }
+  line-height: 22px;
+}
 
 a {
-  color: #45E2FF; }
-
-a:hover {
-  color: #ED4DA4;
-  cursor: pointer; }
+  color: $color-accent-main;
+  &:hover {
+    color: $color-cerise-300;
+    cursor: pointer;
+  }
+}
 
 a:not([href]):not([tabindex]) {
-  color: #45E2FF; }
-
-a:not([href]):not([tabindex]):hover {
-  color: #ED4DA4; }
+  color: $color-accent-main;
+  &:hover {
+    color: $color-cerise-300;
+  }
+}
 
 .fs-s {
-  font-size: 12px; }
+  font-size: $fs-s;
+}
 
 .fs-m0 {
-  font-size: 14px; }
+  font-size: $fs-m0;
+}
 
 .fs-m {
-  font-size: 16px; }
+  font-size: $fs-m;
+}
 
 .fs-l {
-  font-size: 18px; }
+  font-size: $fs-l;
+}
 
 .fs-l0 {
-  font-size: 20px; }
+  font-size: $fs-l0;
+}
 
 .fs-xl {
-  font-size: 22px; }
+  font-size: $fs-xl;
+}
 
 .fs-xxl {
-  font-size: 24px; }
+  font-size: $fs-xxl;
+}
 
 .fs-xxxl {
-  font-size: 32px; }
+  font-size: $fs-xxxl;
+}
