--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,455 +1,15 @@
-.underline-border-above:before {
-  content: "";
-  width: 30px;
-  height: 3px;
-  display: block; }
-
-.underline-border-above.underline-border-above-centered:before {
-  margin: 0 auto 0.6em; }
-
-.underline-border-above.underline-border-above-left:before {
-  margin: 0 0 0.6em; }
-
-.underline-border-above.underline-border-above-pink:before {
-  background: #E5007D; }
-
-.underline-border-above.underline-border-above-blue:before {
-  background: #0069D2; }
-
-.underline-border-above.underline-border-above-gray:before {
-  background: #383F4E; }
-
-.underline-border-above.underline-border-above-black:before {
-  background: #000000; }
-
-.underline-border-above.underline-border-above-white:before {
-  background: #FFFFFF; }
-
-.underline-border-below:after {
-  content: "";
-  width: 30px;
-  height: 3px;
-  display: block; }
-
-.underline-border-below.underline-border-below-centered:after {
-  margin: 0.6em auto 0; }
-
-.underline-border-below.underline-border-below-left:after {
-  margin: 0.6em 0 0; }
-
-.underline-border-below.underline-border-below-pink:after {
-  background: #E5007D; }
-
-.underline-border-below.underline-border-below-blue:after {
-  background: #0069D2; }
-
-.underline-border-below.underline-border-below-gray:after {
-  background: #383F4E; }
-
-.underline-border-below.underline-border-below-black:after {
-  background: #000000; }
-
-.underline-border-below.underline-border-below-white:after {
-  background: #FFFFFF; }
-
-.ui.grid {
-  margin: 0; }
-
-.ui.comments {
-  max-width: 100%; }
-
-.ui.comments .comment .avatar {
-  height: 2.5em; }
-
-.ui.comments .comment .avatar img, .ui.comments .comment img.avatar {
-  object-fit: cover; }
-
-.ui.pink {
-  color: #E5007D !important; }
-
-.ui.inverted.pink.menu {
-  background-color: #E5007D !important;
-  color: #FFFFFF !important; }
-
-.ui.inverted.pink .field > label {
-  color: #FFFFFF !important; }
-
-.ui.pink.header {
-  color: #E5007D !important; }
-
-.ui.pink.label, .ui.pink.labels .label {
-  background-color: #E5007D !important;
-  border-color: #E5007D !important; }
-
-.ui.left.sidebar,
-.ui.right.sidebar {
-  width: 375px; }
-
-@media screen and (max-width: 767px) {
-  .ui.left.sidebar,
-  .ui.right.sidebar {
-    width: 100%; } }
-
-.ui.transparent.dimmer {
-  background-color: transparent; }
-
-.ui.sidebar {
-  pointer-events: auto; }
-
-.ui.modal > .actions {
-  padding: 1rem !important; }
-
-.modals.dimmer {
-  z-index: 1002 !important; }
-
-i.mini.icon,
-i.mini.icons {
-  font-size: 0.4em !important; }
-
-i.tiny.icon,
-i.tiny.icons {
-  font-size: 0.5em !important; }
-
-i.small.icon,
-i.small.icons {
-  font-size: 0.75em !important; }
-
-i.large.icon,
-i.large.icons {
-  font-size: 1.5em !important; }
-
-i.big.icon,
-i.big.icons {
-  font-size: 2em !important; }
-
-i.huge.icon,
-i.huge.icons {
-  font-size: 4em !important; }
-
-i.massive.icon,
-i.massive.icons {
-  font-size: 8em !important; }
-
-img {
-  vertical-align: middle; }
-
-img {
-  border-style: none; }
-
-.tooltip-bottom,
-.tooltip-left,
-.tooltip-right,
-.tooltip-top {
-  position: relative !important;
-  display: inline-block !important;
-  text-decoration: none !important; }
-
-.tooltip-bottom span,
-.tooltip-diagonal-left span,
-.tooltip-diagonal-right span,
-.tooltip-left span,
-.tooltip-right span,
-.tooltip-top span {
-  min-width: 80px;
-  font-family: arial, sans-serif !important;
-  font-size: 13px !important;
-  line-height: normal !important;
-  text-align: center;
-  padding: 10px 10px 12px !important;
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
-  z-index: 1000 !important;
-  transition-duration: .25s;
-  transition-timing-function: cubic-bezier(0.35, 0, 0.35, 1); }
-
-.tooltip-bottom span:before,
-.tooltip-diagonal-left span:before,
-.tooltip-diagonal-right span:before,
-.tooltip-left span:before,
-.tooltip-right span:before,
-.tooltip-top span:before {
-  content: "";
-  display: block;
-  width: 0;
-  height: 0;
-  position: absolute; }
-
-.tooltip-top span {
-  bottom: 100%;
-  margin-bottom: 30px;
-  transition-property: opacity, margin-bottom, visibility; }
-
-.tooltip-top span:before {
-  border-left: 8px solid transparent !important;
-  border-right: 8px solid transparent !important;
-  border-top: 8px solid #000;
-  border-bottom: 0 !important;
-  bottom: -8px;
-  left: 15px; }
-
-.tooltip-top .tooltip-visible {
-  margin-bottom: 10px;
-  visibility: visible;
-  opacity: 1; }
-
-.tooltip-left span {
-  right: 100%;
-  top: -7px;
-  margin-right: 35px;
-  transition-property: opacity, margin-right, visibility; }
-
-.tooltip-left span:before {
-  border-left: 8px solid #000;
-  border-right: 0 !important;
-  border-top: 8px solid transparent !important;
-  border-bottom: 8px solid transparent !important;
-  top: 11px;
-  right: -8px; }
-
-.tooltip-left .tooltip-visible {
-  margin-right: 15px;
-  visibility: visible;
-  opacity: 1; }
-
-.tooltip-right span {
-  left: 100%;
-  top: -7px;
-  margin-left: 35px;
-  transition-property: opacity, margin-left, visibility; }
-
-.tooltip-right span:before {
-  border-left: 0 !important;
-  border-right: 8px solid #000;
-  border-top: 8px solid transparent !important;
-  border-bottom: 8px solid transparent !important;
-  top: 11px;
-  left: -8px; }
-
-.tooltip-right .tooltip-visible {
-  margin-left: 15px;
-  visibility: visible;
-  opacity: 1; }
-
-.tooltip-bottom span {
-  left: -10px;
-  top: 100%;
-  margin-top: 30px;
-  transition-property: opacity, margin-top, visibility; }
-
-.tooltip-bottom span:before {
-  border-left: 8px solid transparent !important;
-  border-right: 8px solid transparent !important;
-  border-top: 0 !important;
-  border-bottom: 8px solid #000;
-  top: -8px;
-  left: 15px; }
-
-.tooltip-bottom .tooltip-visible {
-  margin-top: 10px;
-  visibility: visible;
-  opacity: 1; }
-
-.tooltip-color-blue span {
-  color: #ffffff !important;
-  background: #0069D2;
-  background: linear-gradient(to bottom, #2C84DC 0%, #0069D2 100%);
-  border-radius: 4px;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4); }
-
-.tooltip-color-blue span:before {
-  border-color: #0069D2; }
-
-.tooltip-color-blue span:after {
-  content: "";
-  display: block;
-  border-top: 1px solid #4D96E0;
-  position: absolute;
-  left: 0;
-  top: 1px;
-  width: 100%;
-  height: 10px;
-  border-radius: 4px; }
-
-.tooltip-color-green span {
-  color: #ffffff !important;
-  background: #206906;
-  background: linear-gradient(to bottom, #37790c 0%, #206906 100%);
-  border-radius: 4px;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4); }
-
-.tooltip-color-green span:before {
-  border-color: #206906; }
-
-.tooltip-color-green span:after {
-  content: "";
-  display: block;
-  border-top: 1px solid #4f9c21;
-  position: absolute;
-  left: 0;
-  top: 1px;
-  width: 100%;
-  height: 10px;
-  border-radius: 4px; }
-
-.tooltip-color-green span strong {
-  background: #246407;
-  border-bottom: 1px solid #205a06; }
-
-.tooltip-color-orange span {
-  color: #ffffff !important;
-  background: #c34722;
-  background: linear-gradient(to bottom, #cb581f 0%, #c34722 100%);
-  border-radius: 4px;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4); }
-
-.tooltip-color-orange span:before {
-  border-color: #c34722; }
-
-.tooltip-color-orange span:after {
-  content: "";
-  display: block;
-  border-top: 1px solid #e28266;
-  position: absolute;
-  left: 0;
-  top: 1px;
-  width: 100%;
-  height: 10px;
-  border-radius: 4px; }
-
-.tooltip-color-orange span strong {
-  background: #bf461a;
-  border-bottom: 1px solid #ac3f17; }
-
-.tooltip-color-red span {
-  color: #ffffff !important;
-  background: #b01c34;
-  background: linear-gradient(to bottom, #c01e38 0%, #b01c34 100%);
-  border-radius: 4px;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4); }
-
-.tooltip-color-red span:before {
-  border-color: #b01c34; }
-
-.tooltip-color-red span:after {
-  content: "";
-  display: block;
-  border-top: 1px solid #e96e82;
-  position: absolute;
-  left: 0;
-  top: 1px;
-  width: 100%;
-  height: 10px;
-  border-radius: 4px; }
-
-.tooltip-color-red span strong {
-  background: #b0182d;
-  border-bottom: 1px solid #9d1628; }
-
-.truncate-owerflowing-text {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis; }
-
-.wrap-long-words {
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  -ms-word-break: break-all;
-  word-break: break-word;
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto; }
-
-@font-face {
-  font-family: 'museo';
-  src: url("/assets/fonts/museo/museo-300.otf") format("opentype");
-  font-weight: 300; }
-
-@font-face {
-  font-family: 'museo';
-  src: url("/assets/fonts/museo/museo-500.otf") format("opentype");
-  font-weight: 500; }
-
-@font-face {
-  font-family: 'museo';
-  src: url("/assets/fonts/museo/museo-700.otf") format("opentype");
-  font-weight: 700; }
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "museo", "Helvetica Neue", Helvetica, Arial, sans-serif; }
-
-h1 {
-  font-size: 42px;
-  font-weight: 700; }
-
-h2 {
-  font-size: 36px;
-  font-weight: 700; }
-
-h3 {
-  font-size: 24px;
-  font-weight: 700; }
-
-h4 {
-  font-size: 18px;
-  font-weight: 700; }
-
-h5 {
-  font-size: 16px;
-  font-weight: 700; }
-
-h6 {
-  font-size: 14px;
-  font-weight: 700; }
-
-p, div, span, a {
-  font-family: "Open Sans", sans-serif; }
-
-p {
-  font-size: 16px;
-  line-height: 22px; }
-
-a {
-  color: #45E2FF; }
-
-a:hover {
-  color: #ED4DA4;
-  cursor: pointer; }
-
-a:not([href]):not([tabindex]) {
-  color: #45E2FF; }
-
-a:not([href]):not([tabindex]):hover {
-  color: #ED4DA4; }
-
-.fs-s {
-  font-size: 12px; }
-
-.fs-m0 {
-  font-size: 14px; }
-
-.fs-m {
-  font-size: 16px; }
-
-.fs-l {
-  font-size: 18px; }
-
-.fs-l0 {
-  font-size: 20px; }
-
-.fs-xl {
-  font-size: 22px; }
-
-.fs-xxl {
-  font-size: 24px; }
-
-.fs-xxxl {
-  font-size: 32px; }
+@import './app/styles/borders';
+@import './app/styles/colors';
+@import './app/styles/dimensions';
+@import './app/styles/semantic-ui-modifications';
+@import './app/styles/tooltips';
+@import './app/styles/typography';
 
 body,
 html {
-  height: 100%; }
+  height: 100%;
+}
 
 body {
-  background-color: #E8EBEE !important; }
+  background-color: $color-background !important;
+}
