--- a/src/app/components/headers/basic-border-header/basic-border-header.component.scss
+++ b/src/app/components/headers/basic-border-header/basic-border-header.component.scss
@@ -1,7 +1,11 @@
+@import '../../../styles/colors';
+@import '../../../styles/dimensions';
+
 .basic-border-header-container {
-  background-color: #E5007D !important;
-  height: 74px;
+  background-color: $color-primary-cerise !important;
+  height: $basic-border-header-height;
   padding: 0 !important;
   display: flex;
   flex-direction: column;
-  justify-content: center; }
+  justify-content: center;
+}
