--- a/src/app/components/headers/user-profile-header/user-profile-header.component.scss
+++ b/src/app/components/headers/user-profile-header/user-profile-header.component.scss
@@ -1,3 +1,6 @@
+@import '../../../styles/colors';
+
 .user-profile-header-container {
-  background-color: #E5007D;
-  padding-bottom: 20px; }
+  background-color: $color-primary-cerise;
+  padding-bottom: 20px;
+}
