--- a/src/app/components/layouts/default-layout/default-layout.component.scss
+++ b/src/app/components/layouts/default-layout/default-layout.component.scss
@@ -1,30 +1,36 @@
+@import '../../../styles/colors';
+@import '../../../styles/dimensions';
+
 .layout-wrapper {
-  height: 100%; }
-
-@media screen and (min-width: 1199px) {
-  .layout-wrapper {
-    width: 1199px;
-    margin: 0 auto; } }
-
-@media screen and (max-width: 1199px) {
-  .layout-wrapper {
-    width: 100%;
-    max-width: 100vw; } }
-
-.layout-wrapper .layout-inner-wrapper {
-  display: table;
-  table-layout: fixed;
   height: 100%;
-  background: #FFFFFF;
-  width: 100%; }
+  @media screen and (min-width: $lg-device-width) {
+    width: $lg-device-width;
+    margin: 0 auto;
+  }
+  @media screen and (max-width: $lg-device-width) {
+    width: 100%;
+    max-width: 100vw;
+  }
 
-.layout-wrapper .layout-inner-wrapper .layout-header-padder {
-  display: table-row;
-  height: 54px; }
+  .layout-inner-wrapper {
+    display: table;
+    table-layout: fixed;
+    height: 100%;
+    background: $white;
+    width: 100%;
 
-.layout-wrapper .layout-inner-wrapper .layout-content {
-  display: table-row;
-  height: 100%; }
+    .layout-header-padder {
+      display: table-row;
+      height: $header-height;
+    }
 
-.layout-wrapper .layout-inner-wrapper .layout-footer {
-  display: table-row; }
+    .layout-content {
+      display: table-row;
+      height: 100%;
+    }
+
+    .layout-footer {
+      display: table-row;
+    }
+  }
+}
