--- a/src/app/components/modals/confirmation-modal/confirmation-modal.component.scss
+++ b/src/app/components/modals/confirmation-modal/confirmation-modal.component.scss
@@ -1,4 +1,5 @@
 .button-container {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
-  padding: 0 !important; }
+  padding: 0 !important;
+}
