--- a/src/app/components/navbars/app-navbar/app-navbar.component.scss
+++ b/src/app/components/navbars/app-navbar/app-navbar.component.scss
@@ -1,49 +1,59 @@
+@import '../../../styles/colors';
+
 .app-navbar-container {
   pointer-events: auto;
   width: 100%;
   height: 54px;
   border-radius: 0;
-  color: #9C9FA7;
-  background-color: #F6F6F6; }
+  color: $color-gray-200;
+  background-color: $color-gray-25;
 
-.app-navbar-container .app-navbar-inner-container {
-  display: flex;
-  height: 100%;
-  flex-wrap: nowrap; }
+  .app-navbar-inner-container {
+    display: flex;
+    height: 100%;
+    flex-wrap: nowrap;
 
-.app-navbar-container .app-navbar-inner-container .app-navbar-home {
-  display: flex;
-  flex-wrap: nowrap;
-  align-items: center;
-  margin-left: 15px; }
+    .app-navbar-home {
+      display: flex;
+      flex-wrap: nowrap;
+      align-items: center;
+      margin-left: 15px;
 
-.app-navbar-container .app-navbar-inner-container .app-navbar-home .app-navbar-logo-image {
-  max-width: 165px; }
+      .app-navbar-logo-image {
+        max-width: 165px;
+      }
+    }
 
-.app-navbar-container .app-navbar-inner-container .app-navbar-menus {
-  align-items: center;
-  display: flex;
-  margin-left: auto;
-  margin-right: 15px;
-  flex-wrap: nowrap; }
+    .app-navbar-menus {
+      align-items: center;
+      display: flex;
+      margin-left: auto;
+      margin-right: 15px;
+      flex-wrap: nowrap;
 
-.app-navbar-container .app-navbar-inner-container .app-navbar-menus .app-navbar-menu-icon, .app-navbar-container .app-navbar-inner-container .app-navbar-menus .app-navbar-language-icon {
-  cursor: pointer; }
+      .app-navbar-menu-icon, .app-navbar-language-icon{
+        cursor: pointer;
+      }
 
-.app-navbar-container .app-navbar-inner-container .app-navbar-menus .app-navbar-language-icon {
-  font-size: 11px;
-  border-radius: 23px;
-  border-width: 2px;
-  border-style: solid;
-  border-color: #9C9FA7;
-  padding: 0 .5em;
-  text-align: center;
-  vertical-align: center;
-  line-height: 22px;
-  margin: auto;
-  margin-right: 12px;
-  text-transform: uppercase;
-  user-select: none; }
+      .app-navbar-language-icon {
+        font-size: 11px;
+        border-radius: 23px;
+        border-width: 2px;
+        border-style: solid;
+        border-color: $color-gray-200;
+        padding: 0 .5em;
+        text-align: center;
+        vertical-align: center;
+        line-height: 22px;
+        margin: auto;
+        margin-right: 12px;
+        text-transform: uppercase;
+        user-select: none;
 
-.app-navbar-container .app-navbar-inner-container .app-navbar-menus .app-navbar-language-icon .app-navbar-language-icon-arrow {
-  margin-left: 5px; }
+        .app-navbar-language-icon-arrow {
+          margin-left: 5px;
+        }
+      }
+    }
+  }
+}
