--- a/src/app/components/sections/applications-status-section/applications-status-section.component.scss
+++ b/src/app/components/sections/applications-status-section/applications-status-section.component.scss
@@ -1,2 +1,5 @@
+@import '../../../styles/colors';
+
 .applications-container {
-  background: #F6F6F6 !important; }
+  background: $color-gray-25 !important;
+}
