--- a/src/app/components/sections/how-it-works-section/how-it-works-section.component.scss
+++ b/src/app/components/sections/how-it-works-section/how-it-works-section.component.scss
@@ -1,16 +1,22 @@
+@import '../../../styles/colors';
+
 .how-it-works-container {
-  color: #FFFFFF;
+  color: $white;
   height: 100%;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
 
-.how-it-works-container .instruction {
-  display: flex;
-  align-items: center;
-  margin: 8px 0; }
+  .instruction {
+    display: flex;
+    align-items: center;
+    margin: 8px 0;
 
-.how-it-works-container .instruction .instruction-text {
-  padding-left: 1em; }
+    .instruction-text {
+      padding-left: 1em;
+    }
+  }
 
-.how-it-works-container .how-it-works-button {
-  margin-top: auto; }
+  .how-it-works-button {
+    margin-top: auto;
+  }
+}
