--- a/src/app/components/sections/maximize-chances-section/maximize-chances-section.component.scss
+++ b/src/app/components/sections/maximize-chances-section/maximize-chances-section.component.scss
@@ -1,16 +1,22 @@
+@import '../../../styles/colors';
+
 .maximize-chances-container {
-  color: #FFFFFF;
+  color: $white;
   height: 100%;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
 
-.maximize-chances-container .instruction {
-  display: flex;
-  align-items: center;
-  margin: 8px 0; }
+  .instruction {
+    display: flex;
+    align-items: center;
+    margin: 8px 0;
 
-.maximize-chances-container .instruction .instruction-text {
-  padding-left: 1em; }
+    .instruction-text {
+      padding-left: 1em;
+    }
+  }
 
-.maximize-chances-container .maximize-chances-button {
-  margin-top: auto; }
+  .maximize-chances-button {
+    margin-top: auto;
+  }
+}
