--- a/src/app/components/tabs/basic-tabs/basic-tabs.component.scss
+++ b/src/app/components/tabs/basic-tabs/basic-tabs.component.scss
@@ -1,9 +1,13 @@
-.tab-container {
-  border-bottom: 4px solid #E7E8E9;
-  cursor: pointer;
-  color: #9C9FA7;
-  padding: 0 !important; }
+@import '../../../styles/colors';
 
-.tab-container.active {
-  border-bottom: 4px solid #E5007D;
-  color: #383F4E; }
+.tab-container {
+  border-bottom: 4px solid $color-gray-50;
+  cursor: pointer;
+  color: $color-gray-200;
+  padding: 0 !important;
+
+  &.active {
+    border-bottom: 4px solid $color-primary-cerise;
+    color: $color-gray-500;
+  }
+}
