--- a/src/app/views/my-jobs/my-jobs.component.scss
+++ b/src/app/views/my-jobs/my-jobs.component.scss
@@ -1,15 +1,20 @@
-.my-jobs-header-tab, .my-jobs-header-tab-selected {
+@import '../../styles/colors';
+
+.my-jobs-header-tab {
   padding: 8px;
   text-align: center;
-  background-color: #FFFFFF;
+  background-color: $default-bg-color;
   cursor: pointer;
-  border-bottom: 4px solid #E7E8E9; }
-
-.my-jobs-header-tab h4, .my-jobs-header-tab-selected h4 {
-  color: #9C9FA7; }
+  h4 {
+    color: $color-gray-200;
+  }
+  border-bottom: 4px solid $color-gray-50;
+}
 
 .my-jobs-header-tab-selected {
-  border-bottom: 4px solid #E5007D; }
-
-.my-jobs-header-tab-selected h4 {
-  color: #383F4E; }
+  @extend .my-jobs-header-tab;
+  h4 {
+    color: $color-gray-500;
+  }
+  border-bottom: 4px solid $color-primary-cerise;
+}
