--- a/src/app/components/text/basic-title/basic-title.component.scss
+++ b/src/app/components/text/basic-title/basic-title.component.scss
@@ -1,4 +1,69 @@
-@import './colors';
+@import '../../../styles/colors';
+
+$title-font: 'museo', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+@font-face {
+  font-family: 'museo';
+  src: url('/assets/fonts/museo/museo-300.otf') format('opentype');
+  font-weight: 300;
+}
+
+@font-face {
+    font-family: 'museo';
+    src: url('/assets/fonts/museo/museo-500.otf') format('opentype');
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: 'museo';
+    src: url('/assets/fonts/museo/museo-700.otf') format('opentype');
+    font-weight: 700;
+}
+
+.title {
+  font-family: $title-font;
+  line-height: 1.3em;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+
+.tiny {
+  font-size: 16px;
+}
+
+.small {
+  font-size: 18px;
+}
+
+.medium {
+  font-size: 24px;
+}
+
+.large {
+  font-size: 36px;
+}
+
+.huge {
+  font-size: 42px;
+}
+
+.light {
+  font-weight: 300;
+}
+
+.normal {
+  font-weight: 500;
+}
+
+.bold {
+  font-weight: 700;
+}
 
 .underline-border-above {
   &:before {
