--- a/src/app/styles/semantic-ui-modifications.scss
+++ b/src/app/styles/semantic-ui-modifications.scss
@@ -5,6 +5,39 @@
   margin: 0;
 }
 
+.ui-select-wrapper {
+  &.direction-rtl {
+    .ui.selection.dropdown {
+      padding-left: 2.1em !important;
+      padding-right: 1em !important;
+    }
+
+    .dropdown.icon {
+      left: 1em;
+      right: auto !important;
+    }
+
+    input {
+      direction: rtl;
+      text-align: right;
+      padding-left: 2.1em !important;
+      padding-right: 1em !important;
+    }
+
+    .text {
+      float: right;
+      direction: rtl;
+      text-align: right;
+    }
+
+    .item {
+      direction: rtl;
+      text-align: right !important;
+    }
+  }
+}
+
+
 .ui.comments {
   max-width: 100%;
 }
